  * data/gtkpod.glade:

    Retouched Calendar dialog, migrated from GtkCombo to GtkComboBox.

  * src/file_itunesdb.c:
  
    write_extended_info is now ignored (always true).

  * src/display_playlists.c:
  
    mpl_autoselect is now ignored (always false).
	Use larger icons in the playlist tree view.

  * src/display_tracks.c:
  
    multi_edit_title is now ignored (always true).
	
  * src/prefsdlg.c:
  * data/gtkpod.glade:
  
    Added "Display tooltips" preference.
	
  * data/Makefile.am:
  * data/*.png:
  * data/icons/hicolor/*:
  
    Icon refresh. Removed unused icons.
	
  * src/stock_icons.c:
  * src/stock_icons.h:
  
    Use GtkIconTheme for stock icon handling.

2008-01-02 Matvey Kozhev <sikon at users.sourceforge.net>

  * src/prefs.c:
  * src/prefs.h:
  
    Added function temp_prefs_copy_prefs to create copies of the current prefs
	(for Revert buttons).
	
  * src/prefsdlg.c:
  * data/gtkpod.glade:
  
    Added Revert button.
	Fixed: 'subwindows can be hidden by main window' (except for the sort
	window, this is intended behavior and not a bug)
	Fixed: 'assertion failed when clicking "remove" buttons'
	Fixed: 'assertion `g_path_is_absolute (filename)' failed'
	Fixed: 'signal `file_set' is invalid for instance `0x85d1160''
	Fixed: 'g_object_unref: assertion `G_IS_OBJECT (object)' failed'
	
  * src/fileselection.c:
  
    Use the stock GTK directory selection dialog. Code cleanup.
	
  * src/confirmation.c:
  * data/gtkpod.glade:
  
    Redesigned confirmation window to use GtkTreeView, as well as for
	HIG compliance.
	
  * src/charset.c:
  
    Fixed: 'Invalid column number -1077094488 added to iter'
	(thanks to Daniele Forsi <dforsi@gmail.com>)
	Fixed: 'g_object_unref: assertion `G_IS_OBJECT (object)' failed'

2008-01-01 Matvey Kozhev <sikon at users.sourceforge.net>

  * src/misc_input.c:
  * src/misc.h:
  * src/misc_playlist.c:
  * src/display_photo.c:
  * data/gtkpod.glade:
  
    Refactored get_user_string (input box) to use glade, as well