@@ -75,24 +75,7 @@ extern gchar *xml_file;
 
 /* Some symbols not necessarily defined */
 
-/* Introduced in 2.6 */
-#ifndef GTK_STOCK_DISCONNECT
-#define GTK_STOCK_DISCONNECT GTK_STOCK_GOTO_TOP
-#define GTK_STOCK_CONNECT GTK_STOCK_GOTO_BOTTOM
-#endif
-#ifndef GTK_STOCK_EDIT
-#define GTK_STOCK_EDIT NULL
-#endif
-#ifndef G_IS_DIR_SEPARATOR
-#define G_IS_DIR_SEPARATOR(c) (c == G_DIR_SEPARATOR)
-#endif
-/* SEMIBOLD was introduced with version 2.8 */
-#ifndef PANGO_WEIGHT_SEMIBOLD
-#define PANGO_WEIGHT_SEMIBOLD 600
-#endif
-
-
-
+gchar *utf8_strcasestr (const gchar *haystack, const gchar *needle);
 
 gchar *get_user_string (gchar *title, gchar *message, gchar *dflt,
 			gchar *opt_msg, gboolean *opt_state, const gchar *accept_button);
